# news_scrap

./: .gitignore  main.py  pyproject.toml
